# car

./: CMakeLists.txt  README.md  how-to-run.txt  main.cpp
examples/: dynamic_color.cpp  example2.cpp  materials.cpp  materials2.cpp  modelLoading.cpp
ford_raptor/: license.txt  scene.gltf
include/: camera.h  mesh.h  model.h
include/glad/: glad.h
shaders/: brdf.fs  debug_flat.fs  debug_normals.fs  debug_quad.vs  equirectangular_to_cubemap.fs  irradiance_convolution.fs  model_loading.fs  model_loading.vs  prefilter.fs
src/: glad.c  miniz_export.h  tiny_gltf_impl.cpp  tinyexr.c
